updated user journey to reflect sprint 1 goal

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -132,3 +132,13 @@ p.intro-to-list {
   margin-bottom: 0.5rem;
 }
 
+.panel {
+    clear: both;
+    border-left-style: solid;
+    border-color: #bfc1c3;
+    padding: 0.7894736842em;
+    margin-bottom: 0.7894736842em;
+}
+.panel-border-wide {
+    border-left-width: 10px;
+  }
