--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,8 +17,9 @@
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
+        <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
       </ul>
-      <h2 class="heading-large">Alpha sprint 0</h2>
+      <h2 class="heading-large">Sprint 0</h2>
       <p>Created end March 2016</p>
       <ul>
         <li><a href="/lis/0/index">Start page</a></li>
