--- a/app/views/lis/1/assets/assets-summary.html
+++ b/app/views/lis/1/assets/assets-summary.html
@@ -20,7 +20,12 @@
 
     <table class="data-table assets-summary">
       <tr>
-        <td>Do you or your partner have any savings or other money<br>in this country or abroad?</td>
+        <td>Do you have any property or land in this country<br>or abroad?</td>
+        <td>Yes</td>
+        <td><a href="registration">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do you have any savings or other money<br>in this country or abroad?</td>
         <td>Yes</td>
         <td><a href="registration">Change this</a></td>
       </tr>
