--- a/app/views/lis/1/lis-home-updated.html
+++ b/app/views/lis/1/lis-home-updated.html
@@ -27,26 +27,25 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/education">Start</a></td>
+            <td><a href="you/registration">View or edit</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><a href="partner/work">Start</a></td>
+            <td><a href="partner/partner">View or edit</a></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/money">Start</a></td>
+            <td><a href="assets/propert">View or edit</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/hospital">Start</a></td>
+            <td><a href="live/home">View or edit</a></td>
           </tr>
         </table>
-      <!--
+        
         <p>
-          <a class="button" href="full-help">Submit</a>
+          <a class="button" href="declaration">Next</a>
         </p>
-        -->
       </div>
       
     </div>
