--- a/app/views/lis/1/live/address.html
+++ b/app/views/lis/1/live/address.html
@@ -55,7 +55,7 @@
     {{
       form_macros.button({
         href: 'rent',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
