--- a/app/views/lis/1/live/council-tax.html
+++ b/app/views/lis/1/live/council-tax.html
@@ -15,41 +15,33 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do you pay Council Tax?
+    Do you pay council tax?
   </h1>
-
   <form action="" method="get" class="form">
 
-<div class="form-item-wrapper">
-  <fieldset>
-    <div class="inline-form-groups">
-      <div class="form-group">
-        <input type="radio" id="email" name="contact">
-        <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-          Yes
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="mobile" name="contact">
-        <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
-          No
-        </label>
-      </div>
+    <div class="form-item-wrapper">
+      <fieldset>
+        <div class="inline-form-groups">
+          <div class="form-group">
+            <input type="radio" id="email" name="contact">
+            <label class="form-control-radio" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
+              Yes
+            </label>
+          </div>
+          <div class="form-group">
+            <input type="radio" id="mobile" name="contact">
+            <label class="form-control-radio" for="mobile" data-hide="#contact-email-address">
+              No
+            </label>
+          </div>
+        </div>
+      </fieldset>
     </div>
-
-    <div class="js-hidden panel-indent" id="contact-email-address">
-      <label class="form-label-bold" for="email-address">
-        Council tax payment
-      </label>
-      <input type="text" id="email-address" class="form-control">
-    </div>
-  </fieldset>
-</div>
 
     {{
       form_macros.button({
-        href: 'services',
-        label: 'Save and continue'
+        href: 'tax-amount',
+        label: 'Next'
       })
     }}
     
