--- a/app/views/lis/1/live/ground-rent.html
+++ b/app/views/lis/1/live/ground-rent.html
@@ -13,9 +13,9 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you a joint tennant
+    Do you pay ground rent?
   </h1>
-      <p></p>
+      <p>Describe ground rent?</p>
   
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
@@ -39,7 +39,7 @@
     
         {{
       form_macros.button({
-        href: 'address',
+        href: 'adapted',
         label: 'Next'
       })
     }}
