--- a/app/views/lis/1/live/people.html
+++ b/app/views/lis/1/live/people.html
@@ -39,7 +39,7 @@
         {{
       form_macros.button({
         href: 'living-summary',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
         
