--- a/app/views/lis/1/you/about-you-summary.html
+++ b/app/views/lis/1/you/about-you-summary.html
@@ -20,13 +20,48 @@
 
     <table class="data-table you-summary">
       <tr>
-        <td>Are you in full time education?</td>
+        <td>First name</td>
+        <td>Bill</td>
+        <td><a href="registration">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Last name</td>
+        <td>Ding</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Date of birth</td>
+        <td>24 March 1955</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Email address</td>
+        <td>bill.ding@inter.net</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Telephone number</td>
+        <td>0191 123 1234</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are you living permanently in a care home?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are you currently in hospital?</td>
         <td>No</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
         <td>Do you have a job</td>
         <td>{{myWork}}</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are you in full time education?</td>
+        <td>No</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
@@ -50,6 +85,11 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
+        <td>How often do you receive your state pension payments?</td>
+        <td>Weekly</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
         <td>How much do you receive for your state pension each week?</td>
         <td>£123</td>
         <td><a href="#">Change this</a></td>
@@ -65,7 +105,22 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Do you receive any social security benefits?</td>
+        <td>Do you receive any of the following benefits?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do you receive any other social security benefit?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are you looking after someone but can’t get carers allowance because of another benefit?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Does someone other than your partner get carers allowance for looking after you?</td>
         <td>No</td>
         <td><a href="#">Change this</a></td>
       </tr>
