--- a/app/views/lis/1/you/benefits/benefit-group2.html
+++ b/app/views/lis/1/you/benefits/benefit-group2.html
@@ -71,7 +71,7 @@
     {{
       form_macros.button({
         href: 'benefit-group3',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
