--- a/app/views/lis/1/you/benefits/benefit-group3.html
+++ b/app/views/lis/1/you/benefits/benefit-group3.html
@@ -78,8 +78,8 @@
     </div>
     {{
       form_macros.button({
-        href: 'benefit4',
-        label: 'Save and continue'
+        href: 'benefit7',
+        label: 'Next'
       })
     }}
     
