--- a/app/views/lis/1/you/benefits/benefit4.html
+++ b/app/views/lis/1/you/benefits/benefit4.html
@@ -39,7 +39,7 @@
         {{
           form_macros.button({
             href: 'benefit5',
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
