--- a/app/views/lis/1/you/benefits/benefit7.html
+++ b/app/views/lis/1/you/benefits/benefit7.html
@@ -38,8 +38,8 @@
 
         {{
           form_macros.button({
-            href: 'other-money',
-            label: 'Save and continue'
+            href: 'benefit4',
+            label: 'Next'
           })
         }}
 
