--- a/app/views/lis/1/you/course.html
+++ b/app/views/lis/1/you/course.html
@@ -35,7 +35,7 @@
     {{
       form_macros.button({
         href: 'term-start',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
