--- a/app/views/lis/1/you/hours.html
+++ b/app/views/lis/1/you/hours.html
@@ -27,7 +27,7 @@
     {{
       form_macros.button({
         href: 'pay',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
