--- a/app/views/lis/1/you/pay-amount.html
+++ b/app/views/lis/1/you/pay-amount.html
@@ -30,7 +30,7 @@
     {{
       form_macros.button({
         href: 'value-two',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
