--- a/app/views/lis/1/you/pension/pension-credit.html
+++ b/app/views/lis/1/you/pension/pension-credit.html
@@ -38,10 +38,11 @@
           No, I don't receive pension credit
         </label>
       </div>
+    </div>
     {{
       form_macros.button({
         href: 'pension-type',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
