--- a/app/views/lis/1/you/pension/pension-type.html
+++ b/app/views/lis/1/you/pension/pension-type.html
@@ -55,7 +55,7 @@
     {{
       form_macros.button({
         href: 'pension-amount',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
