--- a/app/views/lis/1/you/pension/pension.html
+++ b/app/views/lis/1/you/pension/pension.html
@@ -38,7 +38,7 @@
 
             {{
           form_macros.button({
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
