--- a/app/views/lis/1/you/pension/private-pension-amount.html
+++ b/app/views/lis/1/you/pension/private-pension-amount.html
@@ -79,7 +79,7 @@
     {{
       form_macros.button({
         href: '../benefits/benefit-group1',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
