--- a/app/views/lis/1/you/support.html
+++ b/app/views/lis/1/you/support.html
@@ -60,7 +60,7 @@
     {{
       form_macros.button({
         href: 'work',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
