--- a/app/views/lis/1/you/term-end.html
+++ b/app/views/lis/1/you/term-end.html
@@ -29,7 +29,7 @@
     {{
       form_macros.button({
         href: 'final-year',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
