--- a/app/views/lis/1/assets/accounts.html
+++ b/app/views/lis/1/assets/accounts.html
@@ -50,7 +50,7 @@
     {{
       form_macros.button({
         href: 'bonds',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
