--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -66,7 +66,7 @@
             {{
           form_macros.button({
             href: 'other',
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
