--- a/app/views/lis/1/assets/shares.html
+++ b/app/views/lis/1/assets/shares.html
@@ -39,7 +39,7 @@
             {{
           form_macros.button({
             href: 'certificates',
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
