--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -19,11 +19,11 @@
         <p class="lede">
           Complete the following sections.
         </p>
-    
+      <!--
         <p>
           If you need to leave the service your information will be saved.
         </p>
-    
+    -->
         <table class="data-table">
           <tr>
             <td>About you</td>
@@ -35,18 +35,25 @@
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/money">Start</a></td>
+            <td><a href="assets/property">Start</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
             <td><a href="live/home">Start</a></td>
           </tr>
         </table>
-    
+        
+        <div class="panel panel-border-wide">
+          <p>
+            You can submit your application here once you have answered all of the questions above.
+          </p>
+        </div>
+  
+      <!--
         <p>
           <a class="button" href="declaration">Submit</a>
         </p>
-        
+     -->   
       </div>
       
     </div>
