--- a/app/views/lis/1/live/adapted.html
+++ b/app/views/lis/1/live/adapted.html
@@ -39,7 +39,7 @@
         {{
       form_macros.button({
         href: 'people',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
         
