--- a/app/views/lis/1/live/home.html
+++ b/app/views/lis/1/live/home.html
@@ -48,7 +48,7 @@
     {{
       form_macros.button({
         href: 'joint',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
