--- a/app/views/lis/1/live/living-summary.html
+++ b/app/views/lis/1/live/living-summary.html
@@ -20,19 +20,19 @@
 
     <table class="data-table living-summary">
       <tr>
-        <td>Are you currently in hospital?</td>
+        <td>Where do you live?</td>
+        <td>In a property<br>I own</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Are you a joint tennant?</td>
         <td>No</td>
         <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
-        <td>Are you living permanently in a care home?</td>
-        <td>No</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Where do you live?</td>
-        <td>In a property I own</td>
-        <td><a href="#">Change this</a></td>
+        <td>Your address</td>
+        <td>1 Street, Place, County, NE1234 </td>
+        <td><a href="registration">Change this</a></td>
       </tr>
       <tr>
         <td>Do you pay rent?</td>
@@ -40,8 +40,23 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Rent per month</td>
-        <td>£250</td>
+        <td>How often do you pay your rent?</td>
+        <td>Weekly</td>
+        <td><a href="#">Change this</a></td>
+      </tr>  
+      <tr>
+        <td>Rent per week</td>
+        <td>£90</td>
+        <td><a href="#">Change this</a></td>
+      </tr>  
+      <tr>
+        <td>Does your rent include any of the following?</td>
+        <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>  
+      <tr>
+        <td>Do you pay for any of the following where you live?</td>
+        <td>No</td>
         <td><a href="#">Change this</a></td>
       </tr>  
       <tr>
@@ -50,14 +65,14 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Council tax per month</td>
-        <td>£100</td>
+        <td>How often do you pay your council tax?</td>
+        <td>Monthly</td>
         <td><a href="#">Change this</a></td>
-      </tr>
+      </tr>  
       <tr>
-        <td>Do you pay any service charges?</td>
+        <td>Do you pay ground rent?</td>
         <td>No</td>
-        <td><a href="registration">Change this</a></td>
+        <td><a href="#">Change this</a></td>
       </tr>
       <tr>
         <td>Do you have a loan to adapt your home for the special needs of a disabled person?</td>
@@ -72,7 +87,7 @@
     </table>
     
     <p>
-      <a class="button" href="../lis-home">Save - continue to my low income scheme home</a>
+      <a class="button" href="../lis-home-updated">Save - continue to my low income scheme home</a>
     </p>
 
   </div>
