--- a/app/views/lis/1/live/rent-includes.html
+++ b/app/views/lis/1/live/rent-includes.html
@@ -13,63 +13,50 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Do you receive any of the following?
+      Does your rent include any of the following?
   </h1>
-  <p>Tick all that apply</p>
+      <p>Tick all that apply</p>
 
   <form action="" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
         <input type="checkbox" id="cbsa" name="bgroup1">
         <label class="form-control-checkbox" for="cbsa">
-          Contribution based employment and support allowance
+          Meals
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="cbj" name="bgroup1">
         <label class="form-control-checkbox" for="cbj">
-          Contribution based jobseekers allowance
+          Heating
         </label>
       </div>
-      <!-- div class="form-group">
+      <div class="form-group">
         <input type="checkbox" id="sa" name="bgroup1">
         <label class="form-control-checkbox" for="sa">
-          Employment and support allowance
+          Cooking
         </label>
       </div>
       <div class="form-group">
         <input type="checkbox" id="jsa" name="bgroup1">
         <label class="form-control-checkbox" for="jsa">
-          Income based job seekers allowance
+          Hot water
         </label>
       </div>
-      <div class="form-group">
-        <input type="checkbox" id="is" name="bgroup1">
-        <label class="form-control-checkbox" for="is">
-          Income support
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="uc" name="bgroup1">
-        <label class="form-control-checkbox" for="uc">
-          Universal credit
-        </label>
-      </div-->
       <p class="form-block">or</p>
       <div class="form-group">
         <input type="checkbox" id="none" name="bgroup1">
         <label class="form-control-checkbox" for="none">
-          I don't receive any of these
+          I don't pay for any of these
         </label>
       </div>
     {{
       form_macros.button({
-        href: 'benefit-group2',
+        href: 'services',
         label: 'Next'
-      })
+      })  
     }}
-    
-    <p class="navigation"><a class="cancel" href="../lis-home">Cancel - back to my low income scheme home</a></p>
+          </div>
 
   </form>
     </div>
