--- a/app/views/lis/1/live/services.html
+++ b/app/views/lis/1/live/services.html
@@ -8,56 +8,62 @@
 {% block content %}
 
 <main id="content" role="main">
-  
+        
   <div class="grid-row">
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Do you pay any service charges?
-  </h1> 
-
-  <p>This includes:
-    <li>cleaning and maintenance</li>
-    <li>service charge 2</li>
-    <li>service charge 3</li>
-  </p>
+      Do you pay for any of the following where you live?
+  </h1>
+      
+      <p>Tick all that apply</p>
 
   <form action="" method="get" class="form">
-      <div class="form-item-wrapper">
-        <fieldset>
-          <div class="inline-form-groups">
-            <div class="form-group">
-              <input type="radio" id="email" name="contact">
-              <label class="form-control-radio js-toggle" for="email" data-show="#contact-email-address" data-hide="#contact-mobile-number">
-                Yes
-              </label>
-            </div>
-            <div class="form-group">
-              <input type="radio" id="mobile" name="contact">
-              <label class="form-control-radio js-toggle" for="mobile" data-hide="#contact-email-address">
-                No
-              </label>
-            </div>
-          </div>
-
-      <div class="js-hidden panel-indent" id="contact-email-address">
-      <label class="form-label-bold" for="email-address">
-        Service charge payment
-      </label>
-      <input type="text" id="email-address" class="form-control">
-    </div>
-
-        </fieldset>
+    <div class="form-item-wrapper">
+      <div class="form-group">
+        <input type="checkbox" id="cbsa" name="bgroup1">
+        <label class="form-control-checkbox" for="cbsa">
+          Maintenance, management or cleaning of communal areas, gardens or grounds
+        </label>
       </div>
-    
-        {{
+      <div class="form-group">
+        <input type="checkbox" id="cbj" name="bgroup1">
+        <label class="form-control-checkbox" for="cbj">
+          The provision of laundry premises or equiptment
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="sa" name="bgroup1">
+        <label class="form-control-checkbox" for="sa">
+          Children's play areas
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="jsa" name="bgroup1">
+        <label class="form-control-checkbox" for="jsa">
+          A warden in sheltered accomodation
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="jsa" name="bgroup1">
+        <label class="form-control-checkbox" for="jsa">
+          A communal television service
+        </label>
+      </div>
+      <p class="form-block">or</p>
+      <div class="form-group">
+        <input type="checkbox" id="none" name="bgroup1">
+        <label class="form-control-checkbox" for="none">
+          I don't pay for any of these
+        </label>
+      </div>
+    {{
       form_macros.button({
-        href: 'adapted',
-        label: 'Save and continue'
-      })
+        href: 'council-tax',
+        label: 'Next'
+      })  
     }}
-        
-    <p class="navigation"><a class="cancel" href="../lis-home">Cancel - back to my low income scheme home</a></p>
+          </div>
 
   </form>
     </div>
