--- a/app/views/lis/1/live/tax-amount.html
+++ b/app/views/lis/1/live/tax-amount.html
@@ -8,53 +8,61 @@
 {% block content %}
 
 <main id="content" role="main">
-      
+  
   <div class="grid-row">
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      About pay
+    About your council tax
   </h1>
-
+  
+  <h2 class="heading-medium">How often do you pay your council tax?</h2>
+  
   <form action="" method="get" class="form">
 
-    <h2>How often do you get paid?</h2>
-    
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="week" name="frequency">
+        <input type="radio" id="week" name="minor">
         <label class="form-control-radio" for="week">
-          Every week
+          Weekly
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="fortnight" name="frequency">
+        <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio" for="fortnight">
-          Every two weeks
+          Fortnightly
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="four-week" name="frequency">
-        <label class="form-control-radio" for="four-week">
-         Every four weeks
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="radio" id="month" name="frequency">
+        <input type="radio" id="month" name="minor">
         <label class="form-control-radio" for="month">
-          Every month
+         Monthly
         </label>
       </div>
-    </div>  
+      <div class="form-group">
+        <input type="radio" id="year" name="minor">
+        <label class="form-control-radio" for="year">
+          Annually
+        </label>
+      </div>
+      
+    {{
+      form_macros.text_field({
+        id: 'first-name',
+        label: 'How much do you pay?'
+      })
+    }}
 
+    </div>  
+        
     {{
       form_macros.button({
-        href: 'pay-amount',
+        href: 'ground-rent',
         label: 'Next'
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">Cancel - back to my low income scheme home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Cancel - back to my low income scheme home</a></p>
 
   </form>
     </div>
