--- a/app/views/lis/1/you/benefits/other-money.html
+++ b/app/views/lis/1/you/benefits/other-money.html
@@ -40,7 +40,7 @@
         {{
           form_macros.button({
             href: '../about-you-summary',
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
