--- a/app/views/lis/1/you/benefits/tax-credits.html
+++ b/app/views/lis/1/you/benefits/tax-credits.html
@@ -39,7 +39,7 @@
             {{
           form_macros.button({
             href: 'pension',
-            label: 'Save and continue'
+            label: 'Next'
           })
         }}
 
