--- a/app/views/lis/1/you/education.html
+++ b/app/views/lis/1/you/education.html
@@ -39,7 +39,7 @@
 
           {{
             form_macros.button({
-              label: 'Save and continue'
+              label: 'Next'
             })
           }}
 
