--- a/app/views/lis/1/you/final-year.html
+++ b/app/views/lis/1/you/final-year.html
@@ -39,7 +39,7 @@
         {{
       form_macros.button({
         href: 'tuition-fees',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
         
