--- a/app/views/lis/1/you/hospital.html
+++ b/app/views/lis/1/you/hospital.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Does someone other than your partner get carers allowance for looking after you?
+        Are you currently in hospital?
       </h1>
   
       <form action="" method="get" class="form">
@@ -38,7 +38,7 @@
 
             {{
           form_macros.button({
-            href: 'other-money',
+            href: 'work',
             label: 'Next'
           })
         }}
