--- a/app/views/lis/1/you/support-application.html
+++ b/app/views/lis/1/you/support-application.html
@@ -44,7 +44,7 @@
     {{
       form_macros.button({
         href: 'support',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
     
