--- a/app/views/lis/1/you/tuition-fees.html
+++ b/app/views/lis/1/you/tuition-fees.html
@@ -42,7 +42,7 @@
     {{
       form_macros.button({
         href: 'support-application',
-        label: 'Save and continue'
+        label: 'Next'
       })
     }}
         
