--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1909,3 +1909,13 @@ li {
 p.intro-to-list {
   padding-bottom: 0;
   margin-bottom: 0.5rem; }
+
+.panel {
+  clear: both;
+  border-left-style: solid;
+  border-color: #bfc1c3;
+  padding: 0.7894736842em;
+  margin-bottom: 0.7894736842em; }
+
+.panel-border-wide {
+  border-left-width: 10px; }
