--- a/app/views/lis/1/declaration.html
+++ b/app/views/lis/1/declaration.html
@@ -14,22 +14,19 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">Declaration</h1>
+        <h1 class="heading-xlarge">Declare &amp; submit</h1>
         
-        <p class="intro-to-list">
-          Some text here for a declaration, maybe with a tick box to agree to it
-        </p>
-
-        <ul class="list list-bullet">
-          <li>getting income support</li>
-          <li>getting pension credit guarantee credit</li>
-          <li>getting universal credit</li> 
-          <li>named on, or entitled to, an NHS Tax Credit Exemption certificate</li>
-        </ul>
-        
-        
+        <div class="notice">
+          <i class="icon icon-important">
+            <span class="visuallyhidden">Warning</span>
+          </i>
+          <strong class="bold-small">
+            I confirm that the information I have given in this form is correct and complete, and I understand that if it not, appropriate action may be taken.
+          </strong>
+        </div>
+        <br>
         <p>
-          <a class="button button-get-started" href="full-help">Submit</a>
+          <a class="button" href="full-help">Agree and submit my application</a>
         </p>
          
       </div>
