minor change to things included with rent

--- a/app/views/lis/1/live/services.html
+++ b/app/views/lis/1/live/services.html
@@ -54,7 +54,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" name="bgroup1">
         <label class="form-control-checkbox" for="none">
-          I don't pay for any of these
+          These things are not included
         </label>
       </div>
     {{
