--- a/app/views/lis/1/assets/property.html
+++ b/app/views/lis/1/assets/property.html
@@ -15,7 +15,7 @@
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
 
   <h1 class="heading-large">
-    Do you have any property or land in this country or abroad?
+    Do {{partnerText}} have any property or land in this country or abroad?
   </h1>
 
   <form action="" method="get" class="form">
