--- a/app/views/lis/1/partner/partner.html
+++ b/app/views/lis/1/partner/partner.html
@@ -18,7 +18,7 @@
   
   <p class="form-hint">We use the term partner to mean a person you live with as part of a couple of the same or oposite sex, whether or not you are married or in a civil partnership.</p>
 
-  <form action="" method="get" class="form">
+  <form action="partner-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <div class="inline-form-groups">
@@ -40,7 +40,6 @@
     
     {{
       form_macros.button({
-        href: 'summary',
         label: 'Next'
       })
     }}
