--- a/app/views/lis/1/full-help.html
+++ b/app/views/lis/1/full-help.html
@@ -14,7 +14,7 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">You can get full help with heath costs</h1>
+        <h1 class="heading-xlarge">You can get full help with health costs</h1>
         
         <h3 class="heading-medium">
           Your reference number is:  123 456 789<br>
