--- a/app/views/lis/1/live/home.html
+++ b/app/views/lis/1/live/home.html
@@ -20,26 +20,26 @@
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="employed" name="work">
-        <label class="form-control-radio" for="employed">
+        <input type="radio" id="own" name="home">
+        <label class="form-control-radio" for="own">
           In a property I own (including mortgaged)
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="self" name="work">
-        <label class="form-control-radio" for="self">
+        <input type="radio" id="rented" name="home">
+        <label class="form-control-radio" for="rented">
           In rented accommodation
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="trainee" name="work">
-        <label class="form-control-radio" for="trainee">
+        <input type="radio" id="else" name="home">
+        <label class="form-control-radio" for="else">
           In someone else's home (for example friends, relatives, parents)
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="trainee" name="work">
-        <label class="form-control-radio" for="trainee">
+        <input type="radio" id="homeless" name="home">
+        <label class="form-control-radio" for="homeless">
           I am homeless
         </label>
       </div>
