--- a/app/views/lis/1/kickout.html
+++ b/app/views/lis/1/kickout.html
@@ -28,7 +28,7 @@
         </ul>
         
         <p>
-          <a class="button button-get-started" href="#">Exit</a>
+          <a class="button" href="/">Exit this service</a>
         </p>
 
       </div>
