--- a/app/views/lis/1/no-help.html
+++ b/app/views/lis/1/no-help.html
@@ -14,7 +14,7 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">You can not get help with heath costs</h1>
+        <h1 class="heading-xlarge">You can not get help with health costs</h1>
               
       </div>
     
