--- a/app/views/lis/1/part-help.html
+++ b/app/views/lis/1/part-help.html
@@ -14,7 +14,7 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">You can get some help with heath costs</h1>
+        <h1 class="heading-xlarge">You can get some help with health costs</h1>
         
         <h3 class="heading-medium">
           Your certificate number is:  123 456 789
