updated the entitlement and some work to tidy up

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,7 @@
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
         <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
+        <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
       <h2 class="heading-large">Sprint 0</h2>
       <p>Created end March 2016</p>
