--- a/app/views/lis/1/lis-home-updated.html
+++ b/app/views/lis/1/lis-home-updated.html
@@ -1,4 +1,4 @@
-{% extends 'templates/nhs_transaction_layout.html' %}
+  {% extends 'templates/nhs_transaction_layout.html' %}
 
 {% block afterHeader %}
   {% include "includes/service-headers/low-income.html" %}
@@ -35,7 +35,7 @@
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
-            <td><a href="assets/propert">View or edit</a></td>
+            <td><a href="assets/property">View or edit</a></td>
           </tr>
           <tr>
             <td>About where you live</td>
