--- a/app/views/lis/1/live/services.html
+++ b/app/views/lis/1/live/services.html
@@ -21,40 +21,40 @@
   <form action="" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="cbsa" name="bgroup1">
-        <label class="form-control-checkbox" for="cbsa">
+        <input type="checkbox" id="management" name="services">
+        <label class="form-control-checkbox" for="management">
           Maintenance, management or cleaning of communal areas, gardens or grounds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="cbj" name="bgroup1">
-        <label class="form-control-checkbox" for="cbj">
-          The provision of laundry premises or equiptment
+        <input type="checkbox" id="laundry" name="services">
+        <label class="form-control-checkbox" for="laundry">
+          The provision of laundry premises or equipment
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sa" name="bgroup1">
-        <label class="form-control-checkbox" for="sa">
+        <input type="checkbox" id="play" name="services">
+        <label class="form-control-checkbox" for="play">
           Children's play areas
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="jsa" name="bgroup1">
-        <label class="form-control-checkbox" for="jsa">
-          A warden in sheltered accomodation
+        <input type="checkbox" id="sheltered" name="services">
+        <label class="form-control-checkbox" for="sheltered">
+          A warden in sheltered accommodation
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="jsa" name="bgroup1">
-        <label class="form-control-checkbox" for="jsa">
+        <input type="checkbox" id="communal" name="services">
+        <label class="form-control-checkbox" for="communal">
           A communal television service
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="checkbox" id="none" name="bgroup1">
+        <input type="checkbox" id="none" name="services">
         <label class="form-control-checkbox" for="none">
-          These things are not included
+          I do not pay for any of these things
         </label>
       </div>
     {{
