--- a/app/views/lis/1/you/about-you-summary.html
+++ b/app/views/lis/1/you/about-you-summary.html
@@ -26,7 +26,7 @@
       </tr>
       <tr>
         <td>Last name</td>
-        <td>Ding</td>
+        <td>Smith</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
