--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -157,3 +157,16 @@ p.intro-to-list {
       margin-left: -15px;
   }
 }
+
+.important-info {
+  font-weight: bold;
+  font-size: 140%;
+  padding-bottom: 15px;
+}
+
+.highlight-block {
+  float: left;
+  border-top: 5px solid #0072C6;
+  margin-top: 20px;
+  padding-top: 10px;
+}
