--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -59,7 +59,7 @@
       <div class="form-group">
         <input type="checkbox" id="none" name="bgroup1">
         <label class="form-control-checkbox" for="none">
-          I don't receive any of these
+          I don't have any of these
         </label>
       </div>
 
