--- a/app/views/lis/1/full-help-updated.html
+++ b/app/views/lis/1/full-help-updated.html
@@ -16,7 +16,7 @@
         
         <h1 class="heading-xlarge">You can get full help with health costs</h1>
 
-        <p class="lede">This means you can claim:</p>
+        <p class="lede">This means you will receive:</p>
 
         <lu>
           <li>free NHS prescriptions</li>
@@ -26,10 +26,10 @@
           <li>the full value of a voucher towards the cost of glasses and contact lenses</li>
           <li>refund of necessary travel costs to receive NHS treatment</li>
         </lu>
-        <br>
+
         <p>You will need to give your reference number if you need to purchase any of these.</p>
         
-        <p>A copy of this information has been emailed to bill.smith@inter.net</p>
+        <p>A copy of this information has been emailed to jane.doe@inter.net</p>
         
         <p><a href="#">Print this page</a></p>
         
@@ -41,29 +41,17 @@
         </p>
 
         <p>We will send you a renew reminder around 01 May 2016.</p>
-        
+      
       </div>
     
     </div>
-    
-    <div class="column-one-thirds">
-      <div class="highlight-block">
-        <ul>
-          <li>Low income scheme entitlement for:</li>
-            <li class="important-info">Bill Smith</li>
-            <li> </li>
-            <li>Reference number:</li>
-            <li class="important-info">123 456 789</li>
-            <li> </li>
-            <li>Valid until:</li>
-            <li class="important-info">01 August 2016</li>
-          </ul>
-      </div>
-    </div>
-    
   </div>
   
 </main>
 
 {% endblock %}
+
+
+
+
 
