--- a/app/views/lis/1/live/living-summary.html
+++ b/app/views/lis/1/live/living-summary.html
@@ -25,7 +25,7 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Are you a joint tennant?</td>
+        <td>Are you a joint tenant?</td>
         <td>No</td>
         <td><a href="registration">Change this</a></td>
       </tr>
