--- a/app/views/lis/1/partner/partner.html
+++ b/app/views/lis/1/partner/partner.html
@@ -16,7 +16,7 @@
     Do you have a partner?
   </h1>
   
-  <p class="form-hint">We use the term partner to mean a person you live with as part of a couple of the same or oposite sex, whether or not you are married or in a civil partnership.</p>
+  <p class="form-hint">We use the term partner to mean a person you live with as part of a couple of the same or opposite sex, whether or not you are married or in a civil partnership.</p>
 
   <form action="partner-handler" method="get" class="form">
       <div class="form-item-wrapper">
