--- a/app/views/lis/1/live/joint.html
+++ b/app/views/lis/1/live/joint.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Are you a joint tennant
+    Are you a joint tenant
   </h1>
       <p></p>
   
