added version 2 added route for multiple pensions added feedback for sprint 1

--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1942,3 +1942,6 @@ p.intro-to-list {
   border-top: 5px solid #0072C6;
   margin-top: 20px;
   padding-top: 10px; }
+
+.strong {
+  font-weight: bold; }
