--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,21 +5,35 @@
 {% block content %}
 
 <main id="content" role="main">
-  
-  <div class="grid-row">
-   
-    <div class="column-two-thirds">
-
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
+      <h2 class="heading-large">Alpha sprint 2</h2>
+      <p>Created early June 2016</p>
+      <ul>
+        <li><a href="/lis/2/index">Start page</a></li>
+        <li><a href="/lis/2/lis-home">My lis home page</a></li>
+      </ul>
+  
       <h2 class="heading-large">Alpha sprint 1</h2>
-      <p>Created May 2016</p>
+      <p>Created mid May 2016</p>
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
         <li><a href="/lis/1/lis-home">My lis home page</a></li>
         <li><a href="/lis/1/lis-home-updated">My lis home page updated</a></li>
         <li><a href="/lis/1/full-help">Full help outcome</a></li>
       </ul>
+      <p>
+        <span class="strong">What we tested: </span> 
+        Full end to end journey for a pensioner who has a state and a private pension, rents their home and pays council tax. This pensioner has full entitlement and there are no others in household, no benefits.
+      </p>
+      <p>
+        <span class="strong">What we found: </span> 
+        Users want clearer info around what part of their rent they need to tell us about, if they get help towards it. They need clearer feedback that the application has been submitted and what the next steps are. Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.
+      </p>
+      <p>
+        <span class="strong">Known issues: </span> 
+        No error messages in the prototype. No feedback when sections are done. Uses dummy data on summary screens. Users don't understand benefits and use different names for them. We need to understand how oftern people pay for things like rent and be more explicit about monthly, four weekly vs calendar month.
+      </p>
       <h2 class="heading-large">Sprint 0</h2>
       <p>Created end March 2016</p>
       <ul>
@@ -27,10 +41,6 @@
         <li><a href="/lis/0/lis-home">My lis home page</a></li>
       </ul>
 
-    </div>
-    
-  </div>
-  
 </main>
 
 {% endblock %}
