adding ticks to completed pages AND GPC kickout

--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -174,3 +174,9 @@ p.intro-to-list {
 .strong {
   font-weight: bold;
 }
+
+.section-tick {
+  width:10%;
+  vertical-align:text-top;
+  padding-left:1em;
+}
