--- a/app/views/lis/2/you/pension/pension-credit.html
+++ b/app/views/lis/2/you/pension/pension-credit.html
@@ -16,24 +16,23 @@
       Do you receive pension credit?
   </h1>
 
-  <form action="" method="get" class="form">
-
+  <form action="pencred-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="ib" name="bgroup1">
+        <input type="radio" id="ib" name="prencred">
         <label class="form-control-radio" for="ib">
           Yes, guarantee credit
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="ssp" name="bgroup1">
+        <input type="radio" id="ssp" name="prencred">
         <label class="form-control-radio" for="ssp">
           Yes, savings credit
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="radio" id="none" name="bgroup1">
+        <input type="radio" id="none" name="prencred" value="none">
         <label class="form-control-radio" for="none">
           No, I don't receive pension credit
         </label>
@@ -41,9 +40,8 @@
     </div>
     {{
       form_macros.button({
-        href: 'pension-type',
         label: 'Next'
-      })
+      })  
     }}
     
 <!--<p class="navigation"><a class="cancel" href="../lis-home">             Cancel - back to my low income scheme home</a>           </p> Cancel - back to my low income scheme home</a></p> -->
