--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1945,3 +1945,8 @@ p.intro-to-list {
 
 .strong {
   font-weight: bold; }
+
+.section-tick {
+  width: 10%;
+  vertical-align: text-top;
+  padding-left: 1em; }
