--- a/app/views/lis/2/assets/other.html
+++ b/app/views/lis/2/assets/other.html
@@ -55,7 +55,7 @@
       })
     }}
     
-<!--<p class="navigation"><a class="cancel" href="../lis-home">             Cancel - back to my low income scheme home</a>           </p> Cancel - back to my low income scheme home</a></p> -->
+    <p class="navigation"><a class="cancel" href="../lis-home3">Back to application home</a></p>
 
   </form>
       
