--- a/app/views/lis/2/live/tax-amount.html
+++ b/app/views/lis/2/live/tax-amount.html
@@ -61,9 +61,7 @@
         label: 'Next'
       })
     }}
-    <!--
-    <p class="navigation"><a class="cancel" href="../../lis-home">Cancel - back to my low income scheme home</a></p>
--->
+    <p class="navigation"><a class="cancel" href="../lis-home4">Back to application home</a></p>
   </form>
     </div>
     </div>
