--- a/app/views/lis/2/you/education.html
+++ b/app/views/lis/2/you/education.html
@@ -43,9 +43,7 @@
             })
           }}
 
-          <!-- <p class="navigation"><a class="cancel" href="../lis-home">             Cancel - back to my low income scheme home</a>           </p>
-            Cancel - back to my low income scheme home</a>
-          </p> -->
+    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
 
       </form>
       
