--- a/app/views/lis/2/you/pension/pension-credit.html
+++ b/app/views/lis/2/you/pension/pension-credit.html
@@ -19,7 +19,7 @@
   <form action="pencred-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="ib" name="prencred">
+        <input type="radio" id="ib" name="prencred" value="ib">
         <label class="form-control-radio" for="ib">
           Yes, guarantee credit
         </label>
@@ -44,7 +44,7 @@
       })  
     }}
     
-<!--<p class="navigation"><a class="cancel" href="../lis-home">             Cancel - back to my low income scheme home</a>           </p> Cancel - back to my low income scheme home</a></p> -->
+    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
 
   </form>
     </div>
