--- a/app/views/lis/2/you/registration.html
+++ b/app/views/lis/2/you/registration.html
@@ -48,7 +48,7 @@
         label: 'Next'
       })
     }}
-
+    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
   </form>
     </div>
     </div>
