--- a/app/views/lis/2/you/contact.html
+++ b/app/views/lis/2/you/contact.html
@@ -38,7 +38,7 @@
         label: 'Next'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home4">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
   </form>
     </div>
     </div>
