--- a/app/views/lis/2/live/rent-includes.html
+++ b/app/views/lis/2/live/rent-includes.html
@@ -57,7 +57,7 @@
       })  
     }}
           </div>
-
+    <p class="navigation"><a class="cancel" href="../lis-home4">Back to application home</a></p>
   </form>
     </div>
     </div>
