--- a/app/views/lis/2/partner/partner.html
+++ b/app/views/lis/2/partner/partner.html
@@ -43,6 +43,7 @@
         label: 'Next'
       })
     }}
+    <p class="navigation"><a class="cancel" href="../lis-home2">Back to application home</a></p>
   </form>
     </div>
     </div>
