--- a/app/views/lis/2/full-help.html
+++ b/app/views/lis/2/full-help.html
@@ -7,61 +7,47 @@
 {% block content %}
 
 <main id="content" role="main">
-    
-  <div class="grid-row">
-   
-    <div class="column-two-thirds">
-
-      <div class="text">
-        
-        <h1 class="heading-xlarge">You can get full help with health costs</h1>
-
-        <p class="lede">This means you can claim:</p>
-
-        <lu>
-          <li>free NHS prescriptions</li>
-          <li>free NHS dental treatment</li>
-          <li>free NHS sight tests</li>
-          <li>free NHS wigs and fabric supports</li>
-          <li>the full value of a voucher towards the cost of glasses and contact lenses</li>
-          <li>refund of necessary travel costs to receive NHS treatment</li>
-        </lu>
-        <br>
-        <p>You will need to give your reference number if you need to purchase any of these.</p>
-        
-        <p>A copy of this information has been emailed to bill.smith@inter.net</p>
-        
-        <p><a href="#">Print this page</a></p>
-        
-        <p><a href="#">Text me my reference number</a></p>
-        
-        <p>
-          You can access this information at any time from the 
-          <a href="#">low income scheme homepage</a>
-        </p>
-
-        <p>We will send you a renew reminder around 01 May 2016.</p>
-        
-      </div>
-    
-    </div>
-    
-    <div class="column-one-thirds">
-      <div class="highlight-block">
-        <ul>
-          <li>Low income scheme entitlement for:</li>
-            <li class="important-info">Bill Smith</li>
-            <li> </li>
-            <li>Reference number:</li>
-            <li class="important-info">123 456 789</li>
-            <li> </li>
-            <li>Valid until:</li>
-            <li class="important-info">01 August 2016</li>
-          </ul>
-      </div>
-    </div>
-    
+  
+  <div class="done-panel">
+    <h2 class="heading-large"><span id="done-tick"> </span>Application complete</h2>
+    <h1 class="heading-xlarge">You can get full help with help costs</h1>
+    <h4 class="heading-small">Your reference number is</h4>
+    <h2 class="heading-large">123 456 789</h2>
+    <h4 class="heading-small">Your certificate expires on 01 June 2018</h4>
   </div>
+  
+  <ul>
+    <li>A copy of your certificate has been emailed to bill.smith@inter.net</li>
+    <li><a href=#>Print my certificate</a></li>
+    <li><a href=#>Download my certificate</a></li>
+    <li>You can access a copy of your certificate at any time by signing into this service.<br>
+      If you have no access to a printer or this is not your own computer we can <a href=#>send a copy in the post</a>.</li>
+  </ul>
+  
+  <hr>
+  
+  <p class="lede">Your certificate will allow you to claim:</p>
+
+  <ul class="list list-bullet">
+    <li>free NHS prescriptions</li>
+    <li>free NHS dental treatment</li>
+    <li>free NHS sight tests</li>
+    <li>free NHS wigs and fabric supports</li>
+    <li>the full value of a voucher towards the cost of glasses and contact lenses</li>
+    <li>refund of necessary travel costs to receive NHS treatment</li>
+  </ul>
+  
+  <p>You will need to show a copy of your certificate if you want to claim any of the above.</p>
+  
+  <p class="lede intro">Your certificate covers:</p>
+  
+  <ul class="list list-bullet">
+    <li>Bill Smith</li>
+  </ul>
+  
+  <p>
+    <a class="button" href="#">Finished</a>
+  </p>
   
 </main>
 
