--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1950,3 +1950,31 @@ p.intro-to-list {
   width: 10%;
   vertical-align: text-top;
   padding-left: 1em; }
+
+.done-panel {
+  background-color: #0072C6;
+  text-align: center;
+  color: white;
+  padding: 20px 0;
+  margin: 30px 0; }
+  .done-panel h1 {
+    line-height: 3rem; }
+  .done-panel h4 {
+    padding-top: 0; }
+  .done-panel h2 {
+    padding-top: 0; }
+
+#done-tick {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  padding: 4px 12px 4px 4px;
+  background-color: #0072C6;
+  background-image: url("/public/images/done-tick.png");
+  background-repeat: no-repeat;
+  background-position: center; }
+
+hr {
+  padding-bottom: 1rem;
+  padding-top: 2rem; }
+
