updated rent questions

--- a/app/views/lis/2/live/rent-amount.html
+++ b/app/views/lis/2/live/rent-amount.html
@@ -49,7 +49,7 @@
     {{
       form_macros.text_field({
         id: 'first-name',
-        label: 'How much do you pay?'
+      label: 'How much do you pay? <span class="form-hint">Take off housing benefit or local housing allowance if you get it.<br>Dont include water rates, council tax or any arrears.</span>'
       })
     }}
 
