--- a/app/views/lis/2/live/rent-includes.html
+++ b/app/views/lis/2/live/rent-includes.html
@@ -40,6 +40,12 @@
       <div class="form-group">
         <input type="checkbox" id="jsa" name="bgroup1">
         <label class="form-control-checkbox" for="jsa">
+          Lighting
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="jsa" name="bgroup1">
+        <label class="form-control-checkbox" for="jsa">
           Hot water
         </label>
       </div>
