--- a/app/assets/sass/nhs_application.scss
+++ b/app/assets/sass/nhs_application.scss
@@ -180,3 +180,10 @@ p.intro-to-list {
   vertical-align:text-top;
   padding-left:1em;
 }
+
+.amount {
+  font-size: 2.121rem;
+  float: left;
+  margin: 0.3rem 0.8rem 0 0;
+  font-weight: bold;
+}
