--- a/app/views/lis/2/you/benefits/benefit-group1.html
+++ b/app/views/lis/2/you/benefits/benefit-group1.html
@@ -69,7 +69,7 @@
       })
     }}
     
-    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
 
   </form>
     </div>
