--- a/app/views/lis/2/you/benefits/benefit7.html
+++ b/app/views/lis/2/you/benefits/benefit7.html
@@ -43,7 +43,7 @@
           })
         }}
 
-    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
 
       </form>
       
