--- a/app/views/lis/2/you/pension/pension-type.html
+++ b/app/views/lis/2/you/pension/pension-type.html
@@ -57,7 +57,7 @@
         label: 'Next'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
   </form>
     </div>
     </div>
