--- a/app/views/lis/2/you/pension/private-pension-amount.html
+++ b/app/views/lis/2/you/pension/private-pension-amount.html
@@ -82,7 +82,7 @@
         label: 'Next'
       })
     }}
-    <p class="navigation"><a class="cancel" href="../lis-home">Back to application home</a></p>
+    <p class="navigation"><a class="cancel" href="../../lis-home">Back to application home</a></p>
   </form>
     </div>
     </div>
