--- a/app/views/lis/2/you/pay-amount.html
+++ b/app/views/lis/2/you/pay-amount.html
@@ -21,8 +21,8 @@
     <p>Explanation of gross pay and where to find it?</p>
     
     {{
-      form_macros.text_field({
-        id: 'first-name',
+      form_macros.amount_field({
+        id: 'money-amount',
         label: 'Gross pay per week'
       })
     }}
