--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -221,8 +221,8 @@ fieldset {
     -moz-box-shadow: inset 0px 0px 0px 2px #231f20;
     box-shadow: inset 0px 0px 0px 2px #231f20; }
 
-.form-control, .ui-autocomplete > #money-amount {
-  width: 94%; }
+.form-control, .ui-autocomplete-input > #money-amount {
+  width: 70%; }
 
 textarea.form-control {
   min-height: 10rem;
@@ -1954,13 +1954,13 @@ p.intro-to-list {
   vertical-align: text-top;
   padding-left: 1em; }
 
-<<<<<<< HEAD
 .amount {
   font-size: 2.121rem;
   float: left;
   margin: 0.3rem 0.8rem 0 0;
-  font-weight: bold; }
-=======
+  font-weight: bold;
+  padding-left: 1em; }
+
 .done-panel {
   background-color: #0072C6;
   text-align: center;
@@ -1988,4 +1988,3 @@ hr {
   padding-bottom: 1rem;
   padding-top: 2rem; }
 
->>>>>>> 05392d0eec96c8930525cc2745ee05d1dc51ba63
