--- a/app/views/lis/2/live/rent-amount.html
+++ b/app/views/lis/2/live/rent-amount.html
@@ -47,8 +47,8 @@
       </div>
       
     {{
-      form_macros.text_field({
-        id: 'first-name',
+      form_macros.amount_field({
+        id: 'money-amount',
       label: 'How much do you pay? <span class="form-hint">Take off housing benefit or local housing allowance if you get it.<br>Dont include water rates, council tax or any arrears.</span>'
       })
     }}
