--- a/app/views/lis/2/live/rent-includes.html
+++ b/app/views/lis/2/live/rent-includes.html
@@ -44,8 +44,8 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="jsa" name="bgroup1">
-        <label class="form-control-checkbox" for="jsa">
+        <input type="checkbox" id="hw" name="bgroup1">
+        <label class="form-control-checkbox" for="hw">
           Hot water
         </label>
       </div>
