updating bank questions

--- a/app/views/lis/2/assets/money.html
+++ b/app/views/lis/2/assets/money.html
@@ -22,7 +22,7 @@
       <div class="form-group">
         <input type="checkbox" id="ib" name="bgroup1">
         <label class="form-control-checkbox" for="ib">
-          Bank or building society accounts
+          Bank, building society or savings accounts
         </label>
       </div>
       <div class="form-group">
@@ -52,7 +52,7 @@
       <div class="form-group">
         <input type="checkbox" id="isa" name="bgroup1">
         <label class="form-control-checkbox" for="isa">
-          Individual Saving Accounts (ISAs) or any other investments
+          Any other investments
         </label>
       </div>
       <p class="form-block">or</p>
