--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1958,8 +1958,7 @@ p.intro-to-list {
   font-size: 2.121rem;
   float: left;
   margin: 0.3rem 0.8rem 0 0;
-  font-weight: bold;
-  padding-left: 1em; }
+  font-weight: bold; }
 
 .done-panel {
   background-color: #0072C6;
